MODBULKOPS-531 Fixed to allow changes in mrc file.